// Vitest Snapshot v1

exports[`objectIdentifier > with schema > should refuse to parse an object identifier with a length prefix of 0 1`] = `
{
  "error": [ParseError: object identifier of length zero is invalid

    00  
    ^^],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to parse an object identifier with a length prefix of 1 that is two bytes long 1`] = `
{
  "error": [ParseError: unable to read base-128 value - value is longer than expected based on context

    01 88 37  
          ^^],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to parse an object identifier with a length prefix of 3 that is only two bytes long 1`] = `
{
  "error": [ParseError: unable to read length prefix - end of buffer

    03 88 37  
             ^^],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to parse an object identifier with unnecessary extra padding 1`] = `
{
  "error": [ParseError: invalid base-128 value - must not contain unnecessary padding

    03 80 88 37  
       ^^],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to serialize an object identifier with a first segment greater than 2 1`] = `
{
  "error": [SerializeError: object identifier first component must be in the range of 0..2],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to serialize an object identifier with a second segment greater than 39 when the first segment is 0 1`] = `
{
  "error": [SerializeError: object identifier second component must be in the range of 0..39 when first component is 0 or 1],
  "success": false,
}
`;

exports[`objectIdentifier > with schema > should refuse to serialize an object identifier with a second segment greater than 39 when the first segment is 1 1`] = `
{
  "error": [SerializeError: object identifier second component must be in the range of 0..39 when first component is 0 or 1],
  "success": false,
}
`;
